# ObsApp

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env  MIGRATIONS.md  alembic.ini  check_vocab.py  dev.db  examine_opstap2.py  examine_opstap3.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02a3b4c5d6e7_make_activity_theme_id_required.py  03f5f24d0423_make_observation_goal_subdomain_nullable.py  6e20bb72433b_initial_schema.py  7a8b9c0d1e2f_add_label_to_activity_goals.py  7a8b9c0d1e2f_replace_activity_goals_with_activity_observation_goals.py  a14bb4af87eb_normalize_goal_subject_and_subdomain.py
backend/app/: main.py
backend/app/api/: activities.py  auth.py  goals.py  observation_goals.py  observations.py  registration.py  schools.py  student_observations.py  themes.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  activity.py  goal.py  koepel.py  observation.py  observation_goal.py  school.py  school_goal_domain.py  school_year.py  student_observation.py  theme.py  user.py
backend/app/repositories/: activity_repository.py  goal_repository.py  observation_goal_repository.py  observation_repository.py  user_repository.py  (+5 more)
backend/scripts/: cleanup_goal_text.py  dev.db  seed.py
backend/tests/: conftest.py  test_activities_api.py  test_auth_api.py  test_auth_service.py  test_management_api.py  test_observation_goals_api.py  test_observations_api.py  test_postgres_integration.py  test_registration_api.py  test_security.py  test_student_observations_api.py  test_themes_api.py
(+82 files in other folders)
